--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-dom": "^17.0.1",
     "react-modal": "^3.11.2",
     "react-scripts": "4.0.0",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "tailwindcss": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,7 +41,6 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.0.2",
-    "postcss": "^8.1.8",
-    "tailwindcss": "^2.0.1"
+    "postcss": "^8.1.8"
   }
 }
